--- a/related.css
+++ b/related.css
@@ -37,12 +37,14 @@ body {
 }
 
 .containerwave {
+  display: block;
+  justify-content: center;
+  align-items: center;
   max-width: 80vw;
   max-height: 80vh;
   grid-column: 1/3;
   grid-row: 2/2;
-  margin: -12rem 0 0 2.5rem;
-  /* background-color: aqua; */
+  margin: -12rem 0 0 10%;
 }
 
 .wave01,
