--- a/related.css
+++ b/related.css
@@ -5,6 +5,7 @@
 body {
   font-size: 62, 5%;
   background-color: #c1936b;
+  overflow: hidden;
 }
 .contant_return {
   display: flex;
@@ -15,8 +16,7 @@ body {
 .container {
   display: grid;
   justify-content: left;
-  min-width: 99vw;
-  min-height: 100vh;
+  min-width: 100%;
   background-color: #ffffff;
   border-top-left-radius: 2rem;
   border-top-right-radius: 2rem;
@@ -24,6 +24,7 @@ body {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
 }
+
 .statusEvent {
   max-width: 50vw;
   max-height: 20vh;
@@ -33,7 +34,7 @@ body {
 }
 .statusEvent h2 {
   background-color: #ffffff;
-  font-family: open sans, sans-serif, bold;
+  font-family: open sans, sans-serif;
 }
 
 .containerwave {
@@ -44,7 +45,7 @@ body {
   max-height: 80vh;
   grid-column: 1/3;
   grid-row: 2/2;
-  margin: -12rem 0 0 10%;
+  margin: -6rem 0 0 10%;
 }
 
 .wave01,
