--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ button.link:hover {
 .cliks {
   display: none;
 }
-@media (min-width: 384px) {
+@media (max-width: 384px) {
   .timeDisplay {
     font-family: sans-serif;
     font-size: 1.5rem;
