--- a/related.css
+++ b/related.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   height: 15vh;
   padding: 2rem;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
@@ -18,8 +19,6 @@ body {
   justify-content: left;
   min-width: 100%;
   background-color: #ffffff;
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -33,8 +32,7 @@ body {
   grid-row: 1/2;
 }
 .statusEvent h2 {
-  background-color: #ffffff;
-  font-family: open sans, sans-serif;
+  font-family: "open Sans", sans-serif, bold;
 }
 
 .containerwave {
@@ -71,9 +69,24 @@ body {
 .wave01:first-child {
   margin-top: 1rem;
 }
-
-@media (max-width: 688px) {
+@media (max-width: 1000px) {
+  .container {
+    margin-top: 5rem;
+  }
+}
+@media (max-width: 410px) {
   .containerwave {
-    margin: -10rem 0 0 10%;
+    display: block;
+    margin: -9rem 0 0 10%;
+  }
+}
+
+@media (max-width: 320px) {
+  .containerwave {
+    display: block;
+    margin: -9rem 0 0 10%;
+
+    /* margin: -1000rem 0 0 10%;
+    max-height: 100vh; */
   }
 }
