--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   height: 15vh;
   padding: 2rem;
 }
+
 .timeDisplay {
   font-family: sans-serif;
   font-size: 4rem;
@@ -112,22 +113,34 @@ button.link:hover {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   margin-top: 1rem;
+  font-family: "Roboto", sans-serif;
 }
 
 .cliks {
   display: none;
 }
-@media (max-width: 688px) {
+@media (max-width: 320px) {
   .timeDisplay {
     font-family: sans-serif;
     font-size: 1.5rem;
-    margin-left: 250px;
+    margin-left: 220px;
     position: absolute;
+  }
+  .timer:first-child {
+    margin-left: -1.5rem;
   }
   .related_1,
   .related_2,
   .related_3,
   .related_4 {
     display: none;
+  }
+}
+@media (min-width: 1000px) {
+  .timer {
+    align-items: center;
+  }
+  .timeDisplay {
+    margin-top: 0.5rem;
   }
 }
