--- a/related.css
+++ b/related.css
@@ -13,6 +13,12 @@ body {
   padding: 2rem;
   font-family: "Roboto", sans-serif;
 }
+.deleted {
+  position: absolute;
+  display: flex;
+  top: 5.5%;
+  right: 5%;
+}
 
 .container {
   display: grid;
@@ -46,6 +52,14 @@ body {
   margin: -6rem 0 0 10%;
 }
 
+/* .wave01::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #000;
+} */
+
 .wave01,
 .wave02,
 .wave03,
@@ -73,11 +87,24 @@ body {
   .container {
     margin-top: 5rem;
   }
+  .del {
+    width: 4.5rem;
+    margin-top: -12%;
+  }
+  .grafico {
+    left: 76%;
+    margin-top: -9%;
+  }
 }
 @media (max-width: 410px) {
   .containerwave {
     display: block;
-    margin: -9rem 0 0 10%;
+
+    margin: -10.5rem 0 0 10%;
+  }
+
+  span {
+    font-size: 12px;
   }
 }
 
