--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 
 .timeDisplay {
   font-family: sans-serif;
-  font-size: 4rem;
-  margin: auto 0 0 50%;
+  font-size: 3rem;
+  margin: auto 0 0 -5%;
 }
 a.link_related {
   background-color: transparent;
@@ -28,6 +28,9 @@ a.link_related {
   font-family: sans-serif;
   margin-left: 0.5rem;
   letter-spacing: 2.5px;
+}
+.telaInicial {
+  left: 50%;
 }
 
 button.link:hover {
@@ -70,6 +73,14 @@ button.link:hover {
   background-color: rgba(195, 222, 233, 1);
   border: 1px solid rgba(0, 0, 0, 0.3);
 }
+/* #area01 {
+  width: 25%;
+  height: 25%;
+} */
+/* canvas {
+  width: 100%;
+  heght: 90%;
+} */
 .container__area02 {
   border-top: none;
   border-right: none;
@@ -126,20 +137,44 @@ button.link:hover {
   display: none;
 }
 
+/* mediaquery */
+
 @media (min-width: 1000px) {
   .timer {
     align-items: center;
   }
   .timeDisplay {
     margin-top: 0.5rem;
+    margin-left: 50%;
   }
 }
 @media (max-width: 380px) {
   .timeDisplay {
     font-family: sans-serif;
     font-size: 1.5rem;
-    margin-left: 230px;
+    margin-left: 31%;
+    top: 4%;
     position: absolute;
+    width: 80px;
+    height: 40px;
+    background-color: #dccbb5;
+    border-radius: 15px;
+    padding: 2px 4.5px;
+    text-align: center;
+    color: #232323;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+  }
+  .button_related {
+    left: 170%;
+    margin-top: 12%;
+  }
+  .telaInicial {
+    left: 18%;
+    margin-top: -8%;
   }
 }
 @media (max-width: 320px) {
